<resources>
    <string name="app_name">StreetApp</string>
    <string name="age_hinder">Birthday</string>
    <string name="username_hinder">Username</string>
    <string name="password_hinder">Password</string>
    <string name="email_hinder">E-mail</string>
    <string name="login_button_text">Login</string>
    <string name="link_to_register">Don \'t have an account? </string>
    <string name="register_button_text">Register</string>
    <string name="re_password_hinder">Confirm Password</string>
    <string name="last_name_hinder">Last Name</string>

    <string-array name="category_name_array">
        <item>-Choose-</item>
        <item>Street Fan</item>
        <item>Painter</item>
        <item>Musician</item>
        <item>Graffiti</item>
        <item>BMX</item>
        <item>Skateboard</item>
        <item>Street Food</item>
        <item>Parkour</item>
        <item>Juggler</item>
    </string-array>

    <string-array name="category_value_array">
        <item>-1</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <string-array name="post_spinner_array">
        <item>Delete</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->

</resources>
