<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/emailET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_hinder"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_hinder"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login_button_text" />

    <TextView
        android:id="@+id/register_linkTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/link_to_register" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/register_link_userTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="registerClick"
            android:text="Street user" />

        <TextView
            android:id="@+id/register_link_artistTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="registerClick"
            android:text="Streetist" />

    </LinearLayout>

</LinearLayout>

